Fixed up pointer-events API change

--- a/code/UI/Hud/SpireHud.html
+++ b/code/UI/Hud/SpireHud.html
@@ -6,6 +6,8 @@
     <ChatPanel />
     <Watermark />
 
+    <div class="cursor" @ref="CursorPanel"></div>
+
     <div class="controls">
         <InputHint btn="Slot1" class="hint">Sword</InputHint>
         <InputHint btn="Slot2" class="hint">Crossbow</InputHint>
